refactor: Column index 값 변경(Map의 key값 -> ColumnInfo 필드에 columnIdx값 추가)