@@ -16,7 +16,7 @@ import io.github.hee9841.excel.strategy.DataFormatStrategy;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.Date;
-import java.util.Map;
+import java.util.List;
 import org.apache.poi.ss.usermodel.Workbook;
 import org.apache.poi.xssf.streaming.SXSSFWorkbook;
 import org.junit.jupiter.api.BeforeEach;
@@ -98,16 +98,20 @@ class ColumnInfoMapperTest {
                 .of(TestExcelDto.class, wb);
 
             //when
-            Map<Integer, ColumnInfo> map = columnInfoMapper.map();
+            List<ColumnInfo> results = columnInfoMapper.map();
 
             //then
-            ColumnInfo firstCol = map.get(0);
-            assertEquals("firstHeader", firstCol.getHeaderName());
-            assertEquals("firstField", firstCol.getFieldName());
+            for (ColumnInfo result : results) {
+                if (result.getColumnIdx() == 0) {
+                    assertEquals("firstHeader", result.getHeaderName());
+                    assertEquals("firstField", result.getFieldName());
+                } else if (result.getColumnIdx() == 1) {
+                    assertEquals("secondHeader", result.getHeaderName());
+                    assertEquals("secondField", result.getFieldName());
 
-            ColumnInfo secondCol = map.get(1);
-            assertEquals("secondHeader", secondCol.getHeaderName());
-            assertEquals("secondField", secondCol.getFieldName());
+                }
+
+            }
         }
 
         @DisplayName("USER_DEFINED 전략일 경우, 지정한 Index값으로 맵핑된다.")
@@ -127,16 +131,19 @@ class ColumnInfoMapperTest {
                 .of(TestExcelDto.class, wb);
 
             //when
-            Map<Integer, ColumnInfo> map = columnInfoMapper.map();
+            List<ColumnInfo> results = columnInfoMapper.map();
 
             //then
-            ColumnInfo firstCol = map.get(5);
-            assertEquals("firstHeader", firstCol.getHeaderName());
-            assertEquals("firstField", firstCol.getFieldName());
+            for (ColumnInfo result : results) {
+                if (result.getColumnIdx() == 5) {
+                    assertEquals("firstHeader", result.getHeaderName());
+                    assertEquals("firstField", result.getFieldName());
+                } else if (result.getColumnIdx() == 4) {
+                    assertEquals("secondHeader", result.getHeaderName());
+                    assertEquals("secondField", result.getFieldName());
 
-            ColumnInfo secondCol = map.get(4);
-            assertEquals("secondHeader", secondCol.getHeaderName());
-            assertEquals("secondField", secondCol.getFieldName());
+                }
+            }
         }
 
 
@@ -159,12 +166,24 @@ class ColumnInfoMapperTest {
                 .of(TestExcelDto.class, wb);
 
             //when
-            Map<Integer, ColumnInfo> map = columnInfoMapper.map();
+
+            //when
+            List<ColumnInfo> results = columnInfoMapper.map();
 
             //then
-            assertEquals("일", map.get(0).getHeaderName());
-            assertEquals("이", map.get(1).getHeaderName());
-            assertEquals("삼", map.get(2).getHeaderName());
+            for (ColumnInfo result : results) {
+                switch (result.getColumnIdx()) {
+                    case 0:
+                        assertEquals("일", result.getHeaderName());
+                        break;
+                    case 1:
+                        assertEquals("이", result.getHeaderName());
+                        break;
+                    case 2:
+                        assertEquals("삼", result.getHeaderName());
+                        break;
+                }
+            }
         }
 
         @DisplayName("column index mapping 예외")
@@ -289,15 +308,14 @@ class ColumnInfoMapperTest {
         @Test
         void cellTypeStrategyIsAuto_applyAutoType() {
             //given && when
-            Map<Integer, ColumnInfo> map = ColumnInfoMapper
-                .of(TypeAutoDto.class, wb).map();
+            List<ColumnInfo> columnInfos = ColumnInfoMapper.of(TypeAutoDto.class, wb).map();
 
             //then
-            assertEquals("primitiveInt", map.get(0).getFieldName());
-            assertEquals("numberField", map.get(0).getHeaderName());
-
-            for (Integer i : map.keySet()) {
-                ColumnInfo columnInfo = map.get(i);
+            for (ColumnInfo columnInfo : columnInfos) {
+                if (columnInfo.getColumnIdx() == 0) {
+                    assertEquals("primitiveInt", columnInfo.getFieldName());
+                    assertEquals("numberField", columnInfo.getHeaderName());
+                }
 
                 switch (columnInfo.getHeaderName()) {
                     case "numberField":
@@ -334,11 +352,12 @@ class ColumnInfoMapperTest {
             }
 
             //when
-            Map<Integer, ColumnInfo> map = ColumnInfoMapper
+            List<ColumnInfo> result = ColumnInfoMapper
                 .of(TestDto.class, wb).map();
 
             //then
-            assertEquals(ColumnDataType._NONE, map.get(0).getColumnType());
+            assertEquals(0, result.getFirst().getColumnIdx());
+            assertEquals(ColumnDataType._NONE, result.getFirst().getColumnType());
         }
     }
 
@@ -385,12 +404,11 @@ class ColumnInfoMapperTest {
             }
 
             // && when
-            Map<Integer, ColumnInfo> map = ColumnInfoMapper
+            List<ColumnInfo> columnInfos = ColumnInfoMapper
                 .of(TestDto.class, wb).map();
 
             //then
-            for (Integer key : map.keySet()) {
-                ColumnInfo columnInfo = map.get(key);
+            for (ColumnInfo columnInfo : columnInfos) {
                 String formatString = columnInfo.getBodyStyle().getDataFormatString();
                 assertFormatByHeaderName(columnInfo.getHeaderName(), formatString);
 
@@ -455,15 +473,12 @@ class ColumnInfoMapperTest {
             }
 
             // && when
-            Map<Integer, ColumnInfo> map = ColumnInfoMapper
-                .of(TestDto.class, wb).map();
+            List<ColumnInfo> columnInfos = ColumnInfoMapper.of(TestDto.class, wb).map();
 
             //then
-            for (Integer key : map.keySet()) {
-                ColumnInfo columnInfo = map.get(key);
+            for (ColumnInfo columnInfo : columnInfos) {
                 String formatString = columnInfo.getBodyStyle().getDataFormatString();
                 assertFormatByHeaderName(columnInfo.getHeaderName(), formatString);
-
             }
         }
 
@@ -501,12 +516,10 @@ class ColumnInfoMapperTest {
             }
 
             // && when
-            Map<Integer, ColumnInfo> map = ColumnInfoMapper
-                .of(TestDto.class, wb).map();
+            List<ColumnInfo> columnInfos = ColumnInfoMapper.of(TestDto.class, wb).map();
 
             //then
-            for (Integer key : map.keySet()) {
-                ColumnInfo columnInfo = map.get(key);
+            for (ColumnInfo columnInfo : columnInfos) {
                 String formatString = columnInfo.getBodyStyle().getDataFormatString();
                 assertFormatByHeaderName(columnInfo.getHeaderName(), formatString);
 
